before errorhandling test http

--- a/ng-fundamentals/src/index.html
+++ b/ng-fundamentals/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgFundamentals</title>
+  <title>MYAPP</title>
   <base href="/"><!--dit doen we om aan te geven dat ons relatief pad van de website vanaf de root vertrekt en niet vanaf een ander pad-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
